Vinicius/key vault crud (#33)
* Fixing leftovers issues

* Adding Vault and Credentials CRUD

* Addings docs e vault

* Addings docs e vault

* fix/cookie-not-working

* Cleanup

* Improvements requested in PR

* CodeRabbit Recommendation

* Improvements requested in PR

---------
